# CanIRunIt

./: .gitignore  README.md  pyproject.toml
scripts/: build_aliases.py
src/canirunit/: __init__.py  aliases.py  benchmark.py  cli.py  compare.py  config.py  detector.py  estimator.py  gguf.py  hub.py  serialize.py  server.py  source_mlx.py  source_ollama.py  sources.py  types.py
src/canirunit/data/: aliases.json
src/canirunit/web/: app.js  glossary.json  index.html  styles.css
src/llmfit/: __init__.py  cli.py  config.py  types.py
tests/: ggufkit.py  test_aliases.py  test_benchmark.py  test_build_aliases.py  test_cli.py  test_compare.py  test_detector.py  test_estimator.py  test_gguf.py  test_hub.py  test_serialize.py  test_server.py  test_source_mlx.py  test_source_ollama.py  test_types_compat.py
