[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llmfit"
version = "0.1.0"
description = "Estimate whether a local GGUF model fits and runs well on your machine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
# Update these before publishing.
authors = [{ name = "Shikhar Sharma", email = "sharma.shikhar03@gmail.com" }]
keywords = ["llm", "gguf", "llama.cpp", "quantization", "on-device", "inference"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "huggingface_hub>=0.20",
    "requests>=2.28",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
llmfit = "llmfit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
